Backend: расширить ContactType enum (WhatsApp, VK, Instagram, TikTok)
Backend: добавить is_visible в Contact

Backend: расширить SavedContact (first_name, last_name, messenger)

Backend: поиск с приватными контактами

Frontend: модальное окно профиля специалиста

Frontend: контакты для связи в ProfilePage

Frontend: форма добавления контакта (имя/фамилия)

Frontend: редактирование контактов

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,9 +15,9 @@ RUN pip install --no-cache-dir "poetry==$POETRY_VERSION"
 
 WORKDIR /backend
 COPY pyproject.toml ./
-# Генерируем lock-файл если его нет
+# Генерируем lock-файл (Poetry 2.x)
 COPY poetry.lock* ./
-RUN poetry lock --no-update || true
+RUN poetry lock
 
 # Установка Python-зависимостей
 RUN poetry install --no-interaction --no-ansi
