--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,8 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 onnxruntime = "^1.20.0"
 tokenizers = "^0.21.0"
 httpx = "^0.28.0"
+cloudinary = "^1.41.0"
+python-multipart = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
