Обновален токен grok

--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,8 @@ JWT__SECRET_KEY=your-secret-key-change-in-production
 JWT__ALGORITHM=HS256
 JWT__ACCESS_TOKEN_EXPIRE_MINUTES=10080
 
-# Groq LLM API (get free key at https://console.groq.com/)
-GROQ__API_KEY=
+# Groq LLM API
+GROQ__API_KEY=your-groq-api-key
 
 # Cloudinary Configuration
 CLOUDINARY__CLOUD_NAME=your-cloudinary-cloud-name
