--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,8 +51,19 @@ services:
       context: ./frontend
       args:
         - VITE_API_URL=${VITE_API_URL:-http://localhost:8000}
+
+
+  nginx:
+    image: nginx:stable-alpine
     ports:
-      - 3000:3000
+      - "80:80"
+      # - "443:443"
+    volumes:
+      # - './frontend/certs/:/etc/nginx/certs:ro'
+      - './nginx.conf:/etc/nginx/nginx.conf'
+    depends_on:
+      - app
+      - frontend
 
 volumes:
   mongo_data:
