--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
       # - './frontend/certs/:/etc/nginx/certs:ro'
       - './nginx.conf:/etc/nginx/nginx.conf'
     depends_on:
-      - app
+      - main-app
       - frontend
 
 volumes:
