--- a/nginx.conf
+++ b/nginx.conf
@@ -7,32 +7,34 @@ http {
     server {
         listen 80;
         server_name d.picaton.com www.d.picaton.com.ru;
-        return 301 https://d.picaton.com$request_uri;
-    }
+        # return 301 https://d.picaton.com$request_uri;
+    # }
 
-    server {
-            listen 443 ssl;
-            server_name d.picaton.com www.d.picaton.com;
+    # server {
+            # listen 443 ssl;
+            # server_name d.picaton.com www.d.picaton.com;
 
+            # ssl_certificate     /etc/nginx/certs/cert.pem;
+            # ssl_certificate_key /etc/nginx/certs/private.pem;
 
-            location / {
-                proxy_pass http://frontend:3000;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            }
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
 
-            location /api/ {
-                proxy_pass http://backend:8000;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
+        location /api/ {
+            proxy_pass http://main-app:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-                proxy_read_timeout 600s;
-            }
+            proxy_read_timeout 600s;
+        }
     }
 }
