Исправлена генерация Grok

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ API__PORT=8000
 API__URL=http://localhost:8000
 
 # Frontend Configuration
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://localhost:8000/api
 
 # Python Path
 PYTHONPATH=./backend/
