Добавлен вход по email

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,23 @@ CLOUDINARY__CLOUD_NAME=your-cloudinary-cloud-name
 CLOUDINARY__API_KEY=your-cloudinary-api-key
 CLOUDINARY__API_SECRET=your-cloudinary-api-secret
 CLOUDINARY__FOLDER=picaton/avatars
+
+# Email Configuration
+EMAIL__SMTP_HOST=maildev
+EMAIL__SMTP_PORT=1025
+EMAIL__SMTP_USER=
+EMAIL__SMTP_PASSWORD=
+EMAIL__FROM_EMAIL=info@picaton.com
+EMAIL__FROM_NAME=Picaton
+EMAIL__USE_TLS=false
+
+# RabbitMQ Configuration
+RABBITMQ__HOST=rabbitmq
+RABBITMQ__PORT=5672
+RABBITMQ__USERNAME=guest
+RABBITMQ__PASSWORD=guest
+ 
+# Magic Link Configuration
+MAGIC_LINK__SECRET_KEY=magic-link-secret-change-in-production
+MAGIC_LINK__EXPIRE_MINUTES=15
+MAGIC_LINK__FRONTEND_URL=http://localhost:80
