--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ pydantic-settings = "^2.12.0"
 uvicorn = "^0.38.0"
 taskiq = "^0.12.1"
 taskiq-redis = "^1.1.2"
+taskiq-aio-pika = "^0.4.1"
 taskiq-fastapi = "^0.4.0"
 redis = "6.4.0"
 alembic = "^1.17.2"
