Добавлена синхронизация контактов через телеграмм бота

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ RABBITMQ__PASSWORD=guest
 # Magic Link Configuration
 MAGIC_LINK__SECRET_KEY=magic-link-secret-change-in-production
 MAGIC_LINK__EXPIRE_MINUTES=15
+
+# Telegram Bot Configuration
+TELEGRAM__BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
+TELEGRAM__BOT_USERNAME=your_bot_username
