Добавлена конфигурация для local LLM

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,20 @@ JWT__ACCESS_TOKEN_EXPIRE_MINUTES=10080
 # Groq LLM API
 GROQ__API_KEY=your-groq-api-key
 
+# Local LLM Configuration (llama.cpp server)
+LOCAL_LLM__ENABLED=true
+LOCAL_LLM__BASE_URL=http://localhost:8080
+LOCAL_LLM__MODEL=T-lite-instruct-0.1
+LOCAL_LLM__MAX_TOKENS=500
+LOCAL_LLM__TEMPERATURE=0.7
+LOCAL_LLM__TIMEOUT=120.0
+
+# Embedding Service Configuration
+EMBEDDING__ENABLED=false
+EMBEDDING__MODEL_PATH=/root/models/embedding/user-bge-m3
+EMBEDDING__DIMENSIONS=1024
+EMBEDDING__NORMALIZE=true
+
 # Cloudinary Configuration
 CLOUDINARY__CLOUD_NAME=your-cloudinary-cloud-name
 CLOUDINARY__API_KEY=your-cloudinary-api-key
