--- a/.env.example
+++ b/.env.example
@@ -27,10 +27,14 @@ GROQ__API_KEY=your-groq-api-key
 LOCAL_LLM__ENABLED=true
 LOCAL_LLM__BASE_URL=http://localhost:8080
 LOCAL_LLM__MODEL=T-lite-instruct-0.1
-LOCAL_LLM__MAX_TOKENS=500
+LOCAL_LLM__MAX_TOKENS=150
 LOCAL_LLM__TEMPERATURE=0.7
 LOCAL_LLM__TIMEOUT=120.0
 
+# Эмбеддинги (USER-bge-m3)
+EMBEDDING__ENABLED=true
+EMBEDDING__MODEL_PATH=/root/models/embedding/user-bge-m3
+EMBEDDING__DIMENSIONS=1024
 # Embedding Service Configuration
 EMBEDDING__ENABLED=false
 EMBEDDING__MODEL_PATH=/root/models/embedding/user-bge-m3
