--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,10 @@ events {
 }
 
 http {
+    # Docker DNS resolver for dynamic upstream resolution
+    resolver 127.0.0.11 valid=10s ipv6=off;
+    resolver_timeout 5s;
+
     server {
         listen 80;
         server_name d.picaton.com www.d.picaton.com.ru;
@@ -18,14 +22,16 @@ http {
             # ssl_certificate_key /etc/nginx/certs/private.pem;
 
         location / {
-            proxy_pass http://frontend:3000;
+            set $frontend_upstream http://frontend:3000;
+            proxy_pass $frontend_upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /api/ {
-            proxy_pass http://main-app:8000;
+            set $backend_upstream http://main-app:8000;
+            proxy_pass $backend_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
