Backend: Создано 6 новых файлов для GigaChat: gigachat_client.py — клиент с OAuth2 авторизацией gigachat_bio.py — генерация био gigachat_tags.py — генерация тегов gigachat_text_tags.py — теги из текста gigachat_query_classifier.py — классификация запросов gigachat_task_decomposer.py — декомпозиция задач Обновлены файлы: config.py, dependencies.py, ai_search.py, card_title.py, search.py, handlers.py, __init__.py
Удалены все файлы Groq

Добавлен SDK: gigachat ^0.1.36 в pyproject.toml

Frontend (dark theme fix):
TagInput.scss — исправлены CSS переменные для тёмной темы
UnifiedBioEditor.scss — исправлены CSS переменные
Конфигурация (.env.example):
Для запуска backend выполните poetry install для установки нового пакета gigachat.

--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,13 @@ JWT__SECRET_KEY=your-secret-key-change-in-production
 JWT__ALGORITHM=HS256
 JWT__ACCESS_TOKEN_EXPIRE_MINUTES=10080
 
-# Groq LLM API
-GROQ__API_KEY=your-groq-api-key
+# GigaChat API (Сбер)
+GIGACHAT__CREDENTIALS=your-base64-encoded-credentials
+GIGACHAT__SCOPE=GIGACHAT_API_PERS
+GIGACHAT__MODEL=GigaChat
+GIGACHAT__MAX_TOKENS=500
+GIGACHAT__TEMPERATURE=0.7
+GIGACHAT__VERIFY_SSL_CERTS=false
 
 # Local LLM Configuration (llama.cpp server)
 LOCAL_LLM__ENABLED=true
