--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ httpx = "^0.28.0"
 cloudinary = "^1.41.0"
 python-multipart = "^0.0.20"
 websockets = "^15.0.1"
+gigachat = "^0.1.36"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
