Письма отправляются на реальную почту, Maildev заменен на Postfix

--- a/.env.example
+++ b/.env.example
@@ -48,14 +48,15 @@ CLOUDINARY__API_KEY=your-cloudinary-api-key
 CLOUDINARY__API_SECRET=your-cloudinary-api-secret
 CLOUDINARY__FOLDER=picaton/avatars
 
-# Email Configuration
-EMAIL__SMTP_HOST=maildev
-EMAIL__SMTP_PORT=1025
+# Email Configuration (Postfix на сервере)
+EMAIL__SMTP_HOST=host.docker.internal
+EMAIL__SMTP_PORT=25
 EMAIL__SMTP_USER=
 EMAIL__SMTP_PASSWORD=
 EMAIL__FROM_EMAIL=info@picaton.com
 EMAIL__FROM_NAME=Picaton
 EMAIL__USE_TLS=false
+EMAIL__ENABLED=true
 
 # RabbitMQ Configuration
 RABBITMQ__HOST=rabbitmq
