Исправлены критические проблемы с вебсокетом и добавлено шифрование сообщений пользователей через Fernet cryptography

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,13 @@ MONGO__USERNAME=admin
 MONGO__PASSWORD=secret
 MONGO__HOST=mongo
 MONGO__PORT=27017
+# MongoDB TLS (recommended for production)
+MONGO__TLS=false
+MONGO__TLS_CA_FILE=
+MONGO__TLS_ALLOW_INVALID_CERTIFICATES=false
 
-# JWT Configuration
-JWT__SECRET_KEY=your-secret-key-change-in-production
+# JWT Configuration (REQUIRED — generate with: openssl rand -hex 32)
+JWT__SECRET_KEY=CHANGE_ME_GENERATE_WITH_openssl_rand_hex_32
 JWT__ALGORITHM=HS256
 JWT__ACCESS_TOKEN_EXPIRE_MINUTES=10080
 
@@ -64,8 +68,8 @@ RABBITMQ__PORT=5672
 RABBITMQ__USERNAME=guest
 RABBITMQ__PASSWORD=guest
  
-# Magic Link Configuration
-MAGIC_LINK__SECRET_KEY=magic-link-secret-change-in-production
+# Magic Link Configuration (REQUIRED — generate with: openssl rand -hex 32)
+MAGIC_LINK__SECRET_KEY=CHANGE_ME_GENERATE_WITH_openssl_rand_hex_32
 MAGIC_LINK__EXPIRE_MINUTES=15
 
 # Telegram Bot Configuration
@@ -77,3 +81,6 @@ YANDEX_SPEECHKIT__API_KEY=your-yandex-cloud-api-key
 YANDEX_SPEECHKIT__FOLDER_ID=your-yandex-cloud-folder-id
 YANDEX_SPEECHKIT__LANG=ru-RU
 YANDEX_SPEECHKIT__TOPIC=general
+
+# Chat Message Encryption (REQUIRED — generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
+ENCRYPTION__CHAT_KEY=CHANGE_ME_GENERATE_FERNET_KEY
