--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http {
 
     server {
         listen 80;
-        server_name d.picaton.com www.d.picaton.com.ru;
+        server_name picaton.com d.picaton.com;
         # return 301 https://d.picaton.com$request_uri;
     # }
 
