Добавлен certbot в docker

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,11 @@ http {
     server {
         listen 80;
         server_name picaton.com d.picaton.com;
-        # return 301 https://d.picaton.com$request_uri;
-    # }
+        # Let’s Encrypt HTTP-01 challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            try_files $uri =404;
+        }
 
     # server {
             # listen 443 ssl;
