--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -164,18 +164,28 @@ services:
       - "80:80"
       # - "443:443"
     volumes:
-      # - './frontend/certs/:/etc/nginx/certs:ro'
+      - certbot-www:/var/www/certbot
+      - letsencrypt:/etc/letsencrypt
       - "./nginx.conf:/etc/nginx/nginx.conf"
     depends_on:
       - main-app
       - frontend
+      - mcp-server
     networks:
       - app-network
+    
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - certbot-www:/var/www/certbot
+      - letsencrypt:/etc/letsencrypt
 
 volumes:
   mongo_data:
   redis_data:
   rabbitmq_data:
+  certbot-www:
+  letsencrypt:
 
 networks:
   app-network:
