Добавлена переадерсация на https страницу

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,19 +10,27 @@ http {
 
     server {
         listen 80;
-        server_name picaton.com d.picaton.com;
+        server_name picaton.com;
+
         # Let’s Encrypt HTTP-01 challenge
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
             try_files $uri =404;
         }
 
-    # server {
-            # listen 443 ssl;
-            # server_name d.picaton.com www.d.picaton.com;
+        # всё остальное редиректим на https
+        location / {
+            return 301 https://picaton.com$request_uri;
+        }
 
-            # ssl_certificate     /etc/nginx/certs/cert.pem;
-            # ssl_certificate_key /etc/nginx/certs/private.pem;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name picaton.com;
+
+        ssl_certificate     /etc/letsencrypt/live/picaton.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/picaton.com/privkey.pem;
 
         location / {
             set $frontend_upstream http://frontend:3000;
