Добавлено монитрование сертфикатов в общую директорию для postfix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -179,6 +179,7 @@ services:
     volumes:
       - certbot-www:/var/www/certbot
       - letsencrypt:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
 
 volumes:
   mongo_data:
